# robot_ws

install/: local_setup.sh  setup.sh
install/robot_arm_simulation/lib/robot_arm_simulation/: arm_controller.py  joint_positions_publisher.py
install/robot_arm_simulation/share/robot_arm_simulation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_arm_simulation/share/robot_arm_simulation/cmake/: robot_arm_simulationConfig-version.cmake  robot_arm_simulationConfig.cmake
install/robot_arm_simulation/share/robot_arm_simulation/config/: arm_controllers.yaml
install/robot_arm_simulation/share/robot_arm_simulation/environment/: ament_prefix_path.dsv  path.dsv
install/robot_arm_simulation/share/robot_arm_simulation/launch/: combined.launch.py  gazebo.launch.py  rviz.launch.py
install/robot_arm_simulation/share/robot_arm_simulation/meshes/: arm_base.dae  arm_base.dae:Zone.Identifier  arm_base.stl  arm_base.stl:Zone.Identifier  elbow_link.dae  elbow_link.dae:Zone.Identifier  forearm.dae  forearm.dae:Zone.Identifier  gripper_base.dae  gripper_base.dae:Zone.Identifier  gripper_base.dae:Zone.Identifier:Zone.Identifier  gripper_left1.dae  gripper_left1.dae:Zone.Identifier  gripper_left1.dae:Zone.Identifier:Zone.Identifier  gripper_left2.dae  gripper_left2.dae:Zone.Identifier  gripper_left2.dae:Zone.Identifier:Zone.Identifier  gripper_left3.dae  gripper_left3.dae:Zone.Identifier  gripper_left3.dae:Zone.Identifier:Zone.Identifier  gripper_right1.dae  gripper_right1.dae:Zone.Identifier  gripper_right1.dae:Zone.Identifier:Zone.Identifier  gripper_right2.dae  gripper_right2.dae:Zone.Identifier  gripper_right2.dae:Zone.Identifier:Zone.Identifier  gripper_right3.dae  gripper_right3.dae:Zone.Identifier  gripper_right3.dae:Zone.Identifier:Zone.Identifier  upper_arm.dae  upper_arm.dae:Zone.Identifier
install/robot_arm_simulation/share/robot_arm_simulation/rviz/: arm_config.rivz
install/robot_arm_simulation/share/robot_arm_simulation/urdf/: gripper_mimic_plugins.xacro  inertial_macros.xacro  robot_arm.urdf.xacro
log/: latest_build
src/robot_arm_simulation/: CMakeLists.txt  package.xml  setup.py
src/robot_arm_simulation/config/: arm_controllers.yaml
src/robot_arm_simulation/launch/: combined.launch.py  gazebo.launch.py  rviz.launch.py
src/robot_arm_simulation/meshes/: arm_base.dae  arm_base.stl  elbow_link.dae  forearm.dae  gripper_left2.dae:Zone.Identifier  upper_arm.dae
src/robot_arm_simulation/rviz/: arm_config.rivz
src/robot_arm_simulation/scripts/: arm_controller.py  esp32_bridge.py  joint_positions_publisher.py  test_simulation.py
src/robot_arm_simulation/urdf/: gripper_mimic_plugins.xacro  inertial_macros.xacro  robot_arm.urdf.xacro
src/robot_arm_simulation/worlds/: empty.world
(+3 files in other folders)
